nearly back on its feet

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -8,7 +8,7 @@
     <title>Touraine Tech - Sponsors</title>
 </head>
 <body class="sponsor-content">
-${require('html-loader?interpolate!./partials/header.html')}
+${require('./partials/header.html')}
 <main class="sponsor-main">
     <section class="presentation">
         <div class="sponor-header">
