feature(footerCodeOfConduct) : adding code of conduct

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@ ${require('./partials/head.html')}
         ${require('./partials/quisommesnous.html')}
         ${require('./partials/participer.html')}
         ${require('./partials/proposer.html')}
+        ${require('./partials/footer.html')}
     </main>
 </body>
 </html>
