--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@ ${require('./partials/head.html')}
         ${require('./partials/presentation.html')}
         ${require('./partials/thematiques.html')}
         ${require('./partials/quisommesnous.html')}
+        ${require('./partials/partenaires.html')}
         ${require('./partials/participer.html')}
         ${require('./partials/proposer.html')}
         ${require('./partials/footer.html')}
