fix(wordings) : cette conférencesSSSS

--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -71,7 +71,7 @@ ${require('./partials/header.html')}
                 <p>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du
                     département informatique de l’école Polytechnique de l’Université de Tours</p>
                 <img class="icon-article" src="../img/public.png" alt="">
-                <p>Cette conférences est ouverte à un large public, aussi bien des professionnels du secteur que des
+                <p>Cette conférence est ouverte à un large public, aussi bien des professionnels du secteur que des
                     étudiants
                     préparant leur insertion dans le monde du travail. Pour cette première, nous accueillerons
                     <strong> 250 personnes</strong>.</p>
