first version of news

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@ ${require('./partials/head.html')}
     ${require('./partials/header.html')}
     <main class="content">
         ${require('./partials/presentation.html')}
+        ${require('./partials/news.html')}
         ${require('./partials/thematiques.html')}
         ${require('./partials/quisommesnous.html')}
         ${require('./partials/partenaires.html')}
