--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@ ${require('./partials/head.html')}
     <main class="content">
         ${require('./partials/presentation.html')}
         ${require('./partials/thematiques.html')}
+        ${require('./partials/news.html')}
         ${require('./partials/quisommesnous.html')}
         ${require('./partials/partenaires.html')}
         ${require('./partials/participer.html')}
