--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@ ${require('./partials/head.html')}
         ${require('./partials/quisommesnous.html')}
         ${require('./partials/partenaires.html')}
         ${require('./partials/participer.html')}
-        ${require('./partials/proposer.html')}
+        ${require('./agenda/agenda.html.js')}
         ${require('./partials/footer.html')}
     </main>
 </body>
