--- a/src/agenda.html
+++ b/src/agenda.html
@@ -5,6 +5,7 @@ ${require('./partials/head.html')}
 ${require('./partials/header.html')}
 <main class="content">
     ${require('./agenda/agenda.html.js')}
+    ${require('./agenda/talkDescription.html.js')}
 </main>
 </body>
 </html>
