--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,13 @@ ${require('./partials/head.html')}
     ${require('./partials/header.html')}
     <main class="content">
         ${require('./partials/presentation.html')}
-        ${require('./partials/thematiques.html')}
-        ${require('./partials/quisommesnous.html')}
+        ${require('./partials/event.html')}
+        ${require('./partials/inscriptions.html')}
         ${require('./partials/partenaires.html')}
-        ${require('./partials/participer.html')}
+        ${require('./partials/quisommesnous.html')}
+        ${require('./partials/thematiques.html')}
         ${require('./agenda/agenda.html.js')}
+        ${require('./partials/participer.html')}
         ${require('./partials/footer.html')}
     </main>
 </body>
