Implementation of news on the web site (#75)
* Implementation of news on the web site (#74)

* first version of news

* reoganize the code

* reoganize the code

* feature(newsPermalink) : adding permalink on news articles

* feature(noMoreNewsModal) : removing news modal as we got permalink on news page

* feature(newsMenuEntry) : adding news menu entry

* feature(presentationApside) : sponsor apside presentation

* feature(first news) : hello world news

* Fix dependencies verions

* Now package-lock is stable, start using it

* CSS actus

* Fixes backslashes on windows

* Fix windows paths (#78)

* CSS section et pages actus

* feature(news) : removing sponsors presentation as it will come in few days

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@ ${require('./partials/head.html')}
         ${require('./partials/presentation.html')}
         ${require('./partials/event.html')}
         ${require('./partials/inscriptions.html')}
+        ${require('./partials/news.html')}
         ${require('./partials/partenaires.html')}
         ${require('./partials/quisommesnous.html')}
         ${require('./partials/thematiques.html')}
