chore(): 2019 landing page
Temporary landing page for 2019 event.
Hacky but temporary so it does not matter (IMO)

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,12 @@
 <html lang="fr">
 ${require('./partials/head.html')}
 <body class="index">
-    ${require('./partials/header.html')}
     <main class="content">
+        <section id="next">
+                <img src="../img/logo_tnt.svg" alt="Touraine Tech" itemprop="logo">
+                <h1 itemprop="name">Touraine Tech 2019</h1>
+        </section>
         ${require('./partials/presentation.html')}
-        ${require('./partials/event.html')}
-        ${require('./partials/inscriptions.html')}
-        ${require('./partials/news.html')}
-        ${require('./partials/partenaires.html')}
-        ${require('./partials/quisommesnous.html')}
-        ${require('./partials/thematiques.html')}
-        ${require('./agenda/agenda.html.js')}
-        ${require('./partials/participer.html')}
         ${require('./partials/footer.html')}
     </main>
 </body>
